quick fix overflow x axis" "

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,5 @@
 
 body {
   font-family: $font-base;
-  
+  box-sizing: border-box;
 }
