--- a/src/scss/settings/_reset.scss
+++ b/src/scss/settings/_reset.scss
@@ -107,6 +107,8 @@ section {
 }
 body {
   line-height: 1;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 ol,
 ul {
